# dogshit

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.build  Dockerfile.e2e  MODULES.md  Makefile  README.md  REFACTOR_PLAN.md  component_overview.md  docker-compose.yml  next_steps.md  notes.md  pyproject.toml  work_details_and_in_progress.md
backend/: analytics.py  app.py  auth.py  database.py  db.py  llm_adapter.py  models.py  report.py  signing.py
bankcleanr/: __init__.py  __main__.py  analytics.py  cli.py  extractor.py  pii.py  recommendation.py  settings.py  signature.py  transaction.py
docs/: rules.md
features/: analytics.feature  api.feature  backend_api.feature  build.feature  cli.feature  environment.py  extract_barclays.feature  extract_coop.feature  extract_directory.feature  extract_hsbc.feature  extract_lloyds.feature  heuristics.feature  llm.feature  llm_adapter.feature  llm_live.feature  parse_alias.feature  parser.feature  placeholder.feature  recommendation.feature  rule_auto_learning.feature  rule_engine.feature
frontend/: cypress.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
rules/: engine.py  heuristic_rule_v1.json
schemas/: heuristic_rule_v1.json  summary_v1.json  transaction_v1.json
scripts/: build_exe.sh  build_linux.sh  build_macos.sh  build_windows.ps1  demo.py  import_heuristics.py  manual_api_demo.py
tests/: __init__.py  test_analytics.py  test_anthropic_adapter.py  test_auth.py  test_backend_api.py  test_backend_app.py  test_barclays_parser.py  test_bfl_adapter.py  test_classify_summary.py  test_cli.py  test_cli_import.py  test_cost_manager.py  (+35 more)
(+80 files in other folders)
