[tool.poetry]
name = "bankcleanr"
version = "0.1.0"
description = "Bank statement analyser"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "bankcleanr" }]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
PyYAML = "^6.0"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
behave = "^1.2.6"

[tool.poetry.scripts]
bankcleanr = "bankcleanr.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
