[tool.poetry]
name = "bankcleanr"
version = "0.1.0"
description = "Bank statement analyser"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "bankcleanr" }]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
PyYAML = "^6.0"
pydantic = "^2.7.0"
pdfplumber = "^0.11.0"
pytesseract = "^0.3.13"
langchain-openai = "^0.3.27"
langchain-core = "^0.3.67"
openai = "^1.93.0"
tenacity = "^9.1.2"
jinja2 = "^3.1"
google-generativeai = "^0.5.1"
fastapi = "^0.111.0"
sqlmodel = "^0.0.16"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
behave = "^1.2.6"
reportlab = "^4.4.2"
ruff = "^0.12.5"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"
jsonschema = "^4.21.1"
types-jsonschema = "^4.25.0.20250720"
types-reportlab = "^4.4.1.20250602"
pyinstaller = {version = "^6.14", markers = "python_version < '3.14'"}
httpx = "^0.28.1"
pytest-asyncio = "^0.23.6"

[tool.poetry.scripts]
bankcleanr = "bankcleanr.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
